# plugin-erc20

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  token.rs
