[package]
name = "plugin-erc20"
version = "0.1.0"
edition = "2021"
authors = ["yogh333"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git", branch="feat/libcall_support" }
#nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git", branch="feat/use_fork_nanos_sdk" }
nanos_sdk = { path = "../ledger-nanos-sdk" }
starknet_sdk = {path = "../starknet-sdk"}


[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true

[package.metadata.nanos]
api_level = "1"
curve = ["secp256k1"]
path = ["m/2645'"]
flags = "0"
icon = "crab.gif"
icon_small = "starknet_small.gif"
name = "plugin-boilerplate"
